--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -30,7 +30,7 @@
 						android:layout_gravity="bottom|end"
 						android:layout_margin="@dimen/fab_margin"
 						app:srcCompat="@android:drawable/ic_menu_send"
-						android:contentDescription="Save" />
+						android:contentDescription="@string/save" />
 
 			<androidx.core.widget.NestedScrollView
 				android:layout_width="match_parent"
