--- a/app/src/main/res/layout/sondetype.xml
+++ b/app/src/main/res/layout/sondetype.xml
@@ -45,28 +45,34 @@
             android:gravity="center"
             android:layout_marginStart="20sp"
             android:layout_width="25sp"
+            android:theme="@style/NumberPickerText"
             android:layout_height="wrap_content"/>
         <NumberPicker
             android:id="@+id/f10"
             android:layout_width="25sp"
             android:gravity="center"
+            android:theme="@style/NumberPickerText"
             android:layout_height="wrap_content"/>
         <NumberPicker
             android:id="@+id/f1"
             android:layout_width="25sp"
+            android:theme="@style/NumberPickerText"
             android:layout_height="wrap_content"/>
         <NumberPicker
             android:id="@+id/f01"
             android:layout_marginStart="15sp"
             android:layout_width="25sp"
+            android:theme="@style/NumberPickerText"
             android:layout_height="wrap_content"/>
         <NumberPicker
             android:id="@+id/f001"
             android:layout_width="25sp"
+            android:theme="@style/NumberPickerText"
             android:layout_height="wrap_content"/>
         <NumberPicker
             android:id="@+id/f0001"
             android:layout_width="25sp"
+            android:theme="@style/NumberPickerText"
             android:layout_height="wrap_content"/>
 
         <TextView
