--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,7 @@
     <color name="light_blue_A200">#FF40C4FF</color>
     <color name="light_blue_A400">#FF00B0FF</color>
     <color name="black_overlay">#66000000</color>
+    <color name="spinner_text">#ff222222</color>
+    <color name="spinner_background1">#ffEEEEEE</color>
+    <color name="spinner_background2">#ffCCCCCC</color>
 </resources>
