--- a/app/src/main/res/layout/activity_fullscreen.xml
+++ b/app/src/main/res/layout/activity_fullscreen.xml
@@ -13,7 +13,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
-        android:focusable="true" />
+        android:focusable="true" >
+    </org.osmdroid.views.MapView>
 
     <ProgressBar
         android:id="@+id/progress"
@@ -62,17 +63,30 @@
             app:layout_constraintBottom_toTopOf="@+id/rssi"/>
 
         <TextView
+            android:id="@+id/id"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:gravity="center"
+            android:text="@string/no_sonde"
+            android:textColor="#7FFF7F"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            app:layout_constraintLeft_toRightOf="@id/buzzer"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
             android:id="@+id/distance"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
             android:gravity="end"
             android:text="\??"
             android:textColor="@color/yellow"
             android:textSize="30sp"
             android:textStyle="bold"
             app:layout_constraintLeft_toRightOf="@+id/buzzer"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/id"
             tools:ignore="HardcodedText" />
 
         <TextView
@@ -84,16 +98,14 @@
             android:textColor="@color/yellow"
             android:textSize="15sp"
             android:textStyle="bold"
-            app:layout_constraintBaseline_toBaselineOf="@+id/distance"
-            app:layout_constraintStart_toEndOf="@+id/distance" />
+            app:layout_constraintBaseline_toBaselineOf="@id/distance"
+            app:layout_constraintStart_toEndOf="@id/distance" />
 
         <TextView
             android:id="@+id/bk"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginLeft="8dp"
-            android:layout_marginEnd="8dp"
             android:background="#80000000"
             android:gravity="center"
             android:text="BK 8:30:00"
@@ -101,50 +113,39 @@
             android:textSize="20sp"
             android:textStyle="bold"
             android:visibility="gone"
-            app:layout_constraintEnd_toStartOf="@+id/height"
-            app:layout_constraintLeft_toRightOf="@+id/buzzer"
-            app:layout_constraintRight_toLeftOf="@+id/id"
-            app:layout_constraintTop_toBottomOf="@+id/distance"
+            app:layout_constraintBottom_toTopOf="@+id/rssi"
+            app:layout_constraintEnd_toStartOf="@+id/type"
+            app:layout_constraintStart_toEndOf="@+id/battery_meter"
+            app:layout_constraintTop_toBottomOf="@id/distance"
             tools:ignore="HardcodedText" />
-
-        <TextView
-            android:id="@+id/id"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="@string/no_sonde"
-            android:textColor="#7FFF7F"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            app:layout_constraintHorizontal_bias="0.22"
-            app:layout_constraintLeft_toRightOf="@id/unit"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/type"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="32dp"
+            android:text="RS41 ???.???MHz"
+            android:textColor="@color/yellow"
             android:textSize="15sp"
             android:textStyle="bold"
-            android:textColor="@color/yellow"
-            android:text="RS41 ???.???MHz"
-            tools:ignore="HardcodedText"
-            app:layout_constraintTop_toBottomOf="@id/id"
-            app:layout_constraintLeft_toLeftOf="@+id/id"/>
+            app:layout_constraintLeft_toRightOf="@+id/id"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="HardcodedText" />
 
         <TextView
             android:id="@+id/height"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
-            android:textSize="15sp"
-            android:textStyle="bold"
             android:layout_weight="1"
-            android:textColor="@color/yellow"
             android:text="H: -m"
-            tools:ignore="HardcodedText"
+            android:textColor="@color/yellow"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintLeft_toLeftOf="@+id/type"
+            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/type"
-            app:layout_constraintLeft_toLeftOf="@+id/id"/>
+            tools:ignore="HardcodedText" />
 
         <TextView
             android:id="@+id/horizontal_speed"
@@ -157,7 +158,7 @@
             android:text="V: -km/h"
             tools:ignore="HardcodedText"
             app:layout_constraintTop_toBottomOf="@id/height"
-            app:layout_constraintLeft_toLeftOf="@+id/id" />
+            app:layout_constraintLeft_toLeftOf="@+id/type" />
 
         <TextView
             android:id="@+id/vertical_speed"
@@ -170,7 +171,7 @@
             android:text="Vs: -m/s"
             tools:ignore="HardcodedText"
             app:layout_constraintTop_toBottomOf="@id/horizontal_speed"
-            app:layout_constraintLeft_toLeftOf="@+id/id" />
+            app:layout_constraintLeft_toLeftOf="@+id/type" />
 
         <TextView
             android:id="@+id/direction"
@@ -179,9 +180,8 @@
             android:layout_alignParentEnd="true"
             android:textColor="#FFFF00"
             android:textSize="40sp"
-            app:layout_constraintBottom_toBottomOf="@id/vertical_speed"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintLeft_toRightOf="@+id/height"
+            android:text=''
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="@id/height"
             tools:ignore="HardcodedText" />
@@ -203,7 +203,8 @@
             android:progressDrawable="@drawable/background"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/dbm"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            tools:ignore="RtlSymmetry" />
 
         <TextView
             android:id="@+id/dbm"
@@ -222,7 +223,7 @@
         android:orientation="vertical"
         android:layout_width="70dp"
         android:layout_height="wrap_content"
-        android:background="#40000000"
+        android:background="#80000000"
         android:animateLayoutChanges="true"
         android:layout_marginTop="5dp"
         android:layout_marginStart="5dp"
@@ -274,12 +275,12 @@
             android:layout_width="fill_parent"
             android:layout_height="60dp"
             android:src="@drawable/ic_question_mark"
-            android:contentDescription="@string/settings" />
+            android:contentDescription="@string/help" />
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/coords"
-        android:background="#40000000"
+        android:background="#80000000"
         android:layout_marginTop="20dp"
         android:layout_gravity="end|top"
         android:visibility="gone"
@@ -292,6 +293,7 @@
             android:layout_marginEnd="20dp"
             android:textSize="25sp"
             android:textStyle="bold"
+            android:textColor="@color/white"
             android:layout_gravity="end|top"
             />
         <TextView
@@ -301,19 +303,8 @@
             android:layout_marginEnd="20dp"
             android:textSize="25sp"
             android:textStyle="bold"
+            android:textColor="@color/white"
             android:layout_gravity="end|top"
             />
     </LinearLayout>
-    <!--<TextView
-        android:id="@+id/coords"
-        android:background="#40000000"
-        android:clickable="true"
-        android:textSize="25sp"
-        android:visibility="gone"
-        android:textStyle="bold"
-        android:layout_gravity="end|top"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>-->
 </FrameLayout>
